# yamusic-launcher

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/: release-notes-template.md
.github/workflows/: publish-packages.yml
DLL_patching/: CMakeLists.txt
DLL_patching/include/: AsarFusePatcher.h
DLL_patching/samples/: fuse_cli.cpp
DLL_patching/src/: flip_fuse_disable_integrity.cpp  fuse_patcher_dll.cpp  main.cpp
YaLauncher/: Program.cs  YaLauncher.csproj  YaLauncher.sln
YaLauncher/Native/: FuseLib.cs
YaLauncher/Services/: DownloadProgress.cs  ExecutableFinder.cs  ModClientUpdater.cs  MultiPartDownloader.cs  SevenZipExtractor.cs  ShortcutService.cs  YandexMusicDownloader.cs  YandexMusicPipeline.cs  YandexProcessManager.cs
YaLauncher/Storage/: AppConfigStore.cs
YaLauncher/Utils/: DirCopy.cs  FiggleFonts.cs  SafeDelete.cs
installer/: YaMusicLauncher.iss
packaging/YaMusicLauncher.Distribution/: README.md  YaMusicLauncher.Distribution.csproj
scripts/: build-release.ps1
